--- a/packages/ed25519-signature-2018/package.json
+++ b/packages/ed25519-signature-2018/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@transmute/ed25519-signature-2018",
-  "author": "Orie Steele",
+  "name": "@sphereon/ed25519-signature-2018",
+  "author": "Sphereon",
   "module": "dist/ed25519-signature-2018.esm.js",
-  "version": "0.7.0-unstable.35",
+  "version": "0.7.0-unstable.2",
   "license": "Apache-2.0",
   "homepage": "https://github.com/transmute-industries/verifiable-data/tree/main/packages/ed25519-signature-2018",
   "repository": {
@@ -13,6 +13,9 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
+    "src/sha256digest.js",
+    "src/sha256digest-browser.js",
+    "src/sha256digest-react-native.js",
     "dist",
     "src"
   ],
@@ -24,7 +27,8 @@
   },
   "scripts": {
     "start": "tsdx watch",
-    "build": "tsdx build",
+    "prepack": "copyfiles --error --flat ./src/sha256digest* ./dist/",
+    "build": "tsdx build && copyfiles --error --flat ./src/sha256digest* ./dist/",
     "pretest": "node scripts/digital-bazaar.generate-fixture.js && node scripts/digital-bazaar.term-test.js && node scripts/digital-bazaar.date-fixture.js",
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint src --fix",
@@ -33,20 +37,34 @@
   "devDependencies": {
     "@digitalbazaar/ed25519-signature-2018": "^2.0.1",
     "@digitalbazaar/ed25519-verification-key-2018": "^3.1.1",
-    "@transmute/credentials-context": "^0.7.0-unstable.35",
     "json-pointer": "^0.6.1",
-    "jsonld-signatures": "^9.3.0",
+    "@digitalcredentials/jsonld-signatures": "^9.3.1",
     "moment": "^2.29.1",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "^27.1.3",
     "tsdx": "^0.14.1",
-    "tslib": "^2.1.0",
-    "typescript": "^4.1.3"
+    "tslib": "^2.3.1",
+    "copyfiles": "^2.4.1",
+    "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@transmute/ed25519-key-pair": "0.7.0-unstable.2",
-    "@transmute/jose-ld": "^0.7.0-unstable.35",
-    "@transmute/security-context": "^0.7.0-unstable.35",
-    "jsonld": "5.2.0"
+    "fast-text-encoding": "^1.0.3",
+    "isomorphic-webcrypto": "^2.3.8",
+    "@digitalcredentials/credentials-context": "^1.0.5",
+    "@transmute/ed25519-key-pair": "0.7.0-unstable.35",
+    "@transmute/jose-ld": "0.7.0-unstable.35",
+    "@transmute/security-context": "0.7.0-unstable.35",
+    "@digitalcredentials/jsonld": "^5.2.1"
+  },
+  "browser": {
+    "crypto": false,
+    "./sha256digest.js": "./sha256digest-browser.js",
+    "fast-text-encoding": false,
+    "isomorphic-webcrypto": false
+  },
+  "react-native": {
+    "crypto": false,
+    "./sha256digest.js": "./sha256digest-react-native.js",
+    "./sha256digest-browser.js": false
   },
   "gitHead": "37f52c102233963d1369862e104df87dd4c5d063"
 }
