--- a/packages/ed25519-signature-2018/tsconfig.json
+++ b/packages/ed25519-signature-2018/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src", "types"],
+  "include": ["src/**/*", "types"],
   "compilerOptions": {
     "module": "esnext",
     "lib": ["dom", "esnext"],
@@ -8,6 +8,7 @@
     "sourceMap": true,
     "rootDir": "./src",
     "strict": true,
+    "allowJs": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
@@ -18,6 +19,7 @@
     "paths": {
       "*": ["src/*", "node_modules/*"]
     },
+    "outDir": "./dist/",
     "jsx": "react",
     "esModuleInterop": true
   }
