--- a/packages/ed25519-signature-2018/package.json
+++ b/packages/ed25519-signature-2018/package.json
@@ -37,11 +37,13 @@
   "devDependencies": {
     "@digitalbazaar/ed25519-signature-2018": "^2.0.1",
     "@digitalbazaar/ed25519-verification-key-2018": "^3.1.1",
+    "@transmute/jsonld": "0.0.4",
     "@transmute/linked-data-proof": "^0.7.0-unstable.80",
     "json-pointer": "^0.6.1",
     "@digitalcredentials/jsonld-signatures": "^9.3.1",
     "moment": "^2.29.1",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "^27.1.5",
+    "jest": "27.5.1",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "copyfiles": "^2.4.1",
@@ -49,13 +51,17 @@
   },
   "dependencies": {
     "fast-text-encoding": "^1.0.3",
-    "isomorphic-webcrypto": "^2.3.8",
+    "@sphereon/isomorphic-webcrypto": "^2.4.0-unstable.4",
     "@digitalcredentials/credentials-context": "^1.0.5",
     "@transmute/credentials-context": "^0.7.0-unstable.80",
-    "@transmute/ed25519-key-pair": "0.7.0-unstable.2",
+    "@transmute/ed25519-key-pair": "0.7.0-unstable.80",
     "@transmute/jose-ld": "^0.7.0-unstable.80",
     "@transmute/security-context": "^0.7.0-unstable.80",
     "@digitalcredentials/jsonld": "^5.2.1"
+  },
+  "resolutions": {
+    "**/jsonld" : "link:./node_modules/@digitalcredentials/jsonld",
+    "**/isomorphic-webcrypto": "link:./node_modules/@sphereon/isomorphic-webcrypto"
   },
   "browser": {
     "crypto": false,
