--- a/packages/ed25519-signature-2018/package.json
+++ b/packages/ed25519-signature-2018/package.json
@@ -2,7 +2,7 @@
   "name": "@sphereon/ed25519-signature-2018",
   "author": "Sphereon",
   "module": "dist/ed25519-signature-2018.esm.js",
-  "version": "0.7.0-unstable.3",
+  "version": "0.7.0-unstable.6",
   "license": "Apache-2.0",
   "homepage": "https://github.com/transmute-industries/verifiable-data/tree/main/packages/ed25519-signature-2018",
   "repository": {
@@ -37,8 +37,7 @@
   "devDependencies": {
     "@digitalbazaar/ed25519-signature-2018": "^2.0.1",
     "@digitalbazaar/ed25519-verification-key-2018": "^3.1.1",
-    "@transmute/jsonld": "0.0.4",
-    "@transmute/linked-data-proof": "^0.7.0-unstable.80",
+    "@sphereon/linked-data-proof": "^0.7.0-unstable.4",
     "json-pointer": "^0.6.1",
     "@digitalcredentials/jsonld-signatures": "^9.3.1",
     "moment": "^2.29.1",
@@ -60,7 +59,8 @@
     "@digitalcredentials/jsonld": "^5.2.1"
   },
   "resolutions": {
-    "**/jsonld" : "link:./node_modules/@digitalcredentials/jsonld",
+    "@transmute/jsonld": "link:./node_modules/@digitalcredentials/jsonld",
+    "**/jsonld": "link:./node_modules/@digitalcredentials/jsonld",
     "**/isomorphic-webcrypto": "link:./node_modules/@sphereon/isomorphic-webcrypto"
   },
   "browser": {
