--- a/packages/linked-data-proof/package.json
+++ b/packages/linked-data-proof/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@transmute/linked-data-proof",
+  "name": "@sphereon/linked-data-proof",
   "author": "Orie Steele",
   "module": "dist/linked-data-proof.esm.js",
-  "version": "0.7.0-unstable.80",
+  "version": "0.7.0-unstable.4",
   "license": "Apache-2.0",
   "homepage": "https://github.com/transmute-industries/verifiable-data/tree/main/packages/linked-data-proof",
   "repository": {
@@ -36,17 +36,18 @@
     "@mattrglobal/jsonld-signatures-bbs": "^0.10.0",
     "@transmute/credentials-context": "0.7.0-unstable.2",
     "@transmute/did-context": "^0.7.0-unstable.80",
-    "@transmute/ed25519-signature-2018": "^0.7.0-unstable.80",
+    "@sphereon/ed25519-signature-2018": "^0.7.0-unstable.3",
     "@transmute/json-web-signature": "^0.7.0-unstable.80",
-    "@transmute/jsonld": "0.0.4",
     "@transmute/security-context": "0.7.0-unstable.2",
     "crypto-ld": "^3.7.0",
-    "jsonld-signatures": "^9.3.0",
+    "@digitalcredentials/jsonld-signatures": "^9.3.1",
+    "jest-environment-node": "^27.5.1",
     "tsdx": "^0.13.2",
     "tslib": "^2.3.0",
     "typescript": "^3.9.5"
   },
   "dependencies": {
+    "@digitalcredentials/jsonld": "^5.2.1",
     "@transmute/did-key-ed25519": "^0.3.0-unstable.5",
     "serialize-error": "^7.0.1"
   }
